@@ -16,6 +16,7 @@ Included
 - `verify:360` idempotence context now includes strict-mode flags, preventing replay-key collisions between strict and non-strict runs.
 - Added `WEFTEND_360_FAIL_ON_PARTIAL=1` policy support (and helper commands) to force non-zero exit when verify ends in PARTIAL.
 - `verify_360_report.txt` now includes explicit gate-policy and adapter-doctor strict summary lines (`policy.*`, `adapterDoctor.*`) for quick human review.
+- `verify:360:harness` now checks these report lines in pass/replay/fail lanes to prevent report regression.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
 - Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
